--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: ./packages/app/Dockerfile
       target: development-stage
+      cache_from:
+        - matterlabs/local-node:latest
     command: npm run --prefix packages/app dev -- --host
     ports:
       - '3010:3010'
@@ -21,6 +23,8 @@ services:
       context: .
       dockerfile: ./packages/worker/Dockerfile
       target: development-stage
+      cache_from:
+        - block-explorer_worker:latest
     command: npm run --prefix packages/worker dev:debug
     environment:
       - PORT=3001
@@ -49,6 +53,8 @@ services:
       context: .
       dockerfile: ./packages/api/Dockerfile
       target: development-stage
+      cache_from:
+        - postgres:latest #not sure here about the name
     command: npm run --prefix packages/api dev:debug
     environment:
       - PORT=3020
@@ -66,61 +72,6 @@ services:
       - /usr/src/app/packages/api/node_modules
     depends_on:
       - worker
-    restart: unless-stopped
-
-  postgres:
-    image: "postgres:14"
-    logging:
-      driver: none 
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=block-explorer
-
-  geth:
-    image: "matterlabs/geth:latest"
-    logging:
-      driver: none
-    ports:
-      - "8545:8545"
-      - "8546:8546"
-    volumes:
-      - geth:/var/lib/geth/data
-
-  zksync:
-    stdin_open: true
-    tty: true
-    image: matterlabs/local-node:latest2.0
-    depends_on:
-      postgres:
-        condition: service_healthy
-      geth:
-        condition: service_started
-    ports:
-      - "3050:3050" # JSON RPC HTTP port
-      - "3051:3051" # JSON RPC WS port
-    volumes:
-      # Configs folder bind
-      - zksync-config:/etc/env/
-      # Storage folder bind
-      - zksync-data:/var/lib/zksync/data
-    environment:
-      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/zksync_local
-      - ETH_CLIENT_WEB3_URL=http://geth:8545
-    healthcheck:
-      test: "curl -H \"Content-Type: application/json\" -X POST --data '{\"jsonrpc\":\"2.0\",\"method\":\"web3_clientVersion\",\"params\":[],\"id\":67}' 127.0.0.1:3050 || exit 1"
-      interval: 5s
-      timeout: 5s
-      retries: 120
     restart: unless-stopped
 
 volumes:
