--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker Image
-        run: docker build -t block-explorer_app:latest 
+        run: docker build -t block-explorer_app:latest .
 
       - name: Cache Docker Image
         uses: actions/cache@v2
