--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           path: |
             /var/lib/docker/
+# where the cache is stored -> /var/lib/docker/
           key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
           restore-keys: |
             ${{ runner.os }}-docker-
