--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -29,17 +29,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Cache Docker images
-        id: cache-docker-images
-        uses: actions/cache@v3
-        with:
-          path: |
-            /var/lib/docker/
-# where the cache is stored -> /var/lib/docker/
-          key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-docker-
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -60,6 +49,17 @@ jobs:
       - name: Start docker containers
         run: |
           docker-compose -f "docker-compose.yaml" up -d --build
+
+      - name: Cache Docker images
+        id: cache-docker-images
+        uses: actions/cache@v3
+        with:
+          path: |
+            /var/lib/docker/
+          # where the cache is stored -> /var/lib/docker/
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
+          restore-keys: |
+            ${{ runner.os }} docker
 
       - name: List running containers
         run: docker ps
