--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -53,6 +53,7 @@ jobs:
           path: |
             /var/lib/docker/
           # where the cache is stored -> /var/lib/docker/
+          # test
           key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
           restore-keys: |
             ${{ runner.os }} docker
