--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -53,10 +53,12 @@ jobs:
           path: |
             /var/lib/docker/
           # where the cache is stored -> /var/lib/docker/
-          # test
           key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
           restore-keys: |
             ${{ runner.os }} docker
+
+      - name: Check whats inside
+        run: tree -f
 
       - name: Checkout Repository
         uses: actions/checkout@v2
