--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -56,9 +56,13 @@ jobs:
           key: ${{ runner.os }}-docker-${{ hashFiles('**/docker-compose.yaml') }}
           restore-keys: |
             ${{ runner.os }} docker
+            
+      - name: Print Working Directory
+        run: |
+          pwd
 
-      - name: Check whats inside
-        run: tree -f
+      - name: List files in ci cd
+        run: ls -la /var/lib/docker/ci\ cd
 
       - name: Checkout Repository
         uses: actions/checkout@v2
