--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -50,8 +50,8 @@ jobs:
         run: |
           pwd
 
-      - name: List files in ci cd
-        run: sudo ls -la /var/lib/docker/ci\ cd
+#      - name: List files in ci cd
+#        run: sudo ls -la /var/lib/docker/ci\ cd
 
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -69,7 +69,7 @@ jobs:
 
       - name: List running containers
         run: docker ps
-        
+
       - name: Cache Docker images
         id: cache-docker-images
         uses: actions/cache@v3
