fix: check docker storage version

--- a/.github/workflows/api-e2e.yml
+++ b/.github/workflows/api-e2e.yml
@@ -64,3 +64,7 @@ jobs:
       - name: Stop containers
         if: always()
         run: docker-compose -f "docker-compose.e2e.yaml" down
+        
+      - name: Get Docker Storage Version
+        run: |
+          docker info --format '{{.DriverStatus}}'
