--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -11,7 +11,7 @@ jobs:
       checks: write
     strategy:
       matrix:
-        node-version: ['lts/*'] # 18.17.1 or lts/* 
+        node-version: ['lts/*'] # 18.17.1 or lts/*
         test-pattern:
           - accounts.test.ts
           - addresses.test.ts
@@ -65,3 +65,7 @@ jobs:
         if: always()
         run: |
           docker-compose -f "docker-compose.yaml" down
+
+      - name: Get Docker Storage Version
+        run: |
+          docker info --format '{{.DriverStatus}}'
