--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -11,17 +11,17 @@ jobs:
       checks: write
     strategy:
       matrix:
-        node-version: ['lts/*'] # 18.17.1 or lts/* 
+        node-version: ['lts/*'] # 18.17.1 or lts/*
         test-pattern:
           - accounts.test.ts
-          - addresses.test.ts
-          - batches.test.ts
-          - blocks.test.ts
-          - contracts.test.ts
-          - logs.test.ts
-          - stats.test.ts
-          - tokens.test.ts
-          - transactions.test.ts
+          #- addresses.test.ts
+          #- batches.test.ts
+          #- blocks.test.ts
+          #- contracts.test.ts
+          #- logs.test.ts
+          #- stats.test.ts
+          #- tokens.test.ts
+          #- transactions.test.ts
     name: 'API test set: ${{ matrix.test-pattern}} / Node: ${{ matrix.node-version}}'
     steps:
       - name: Checkout with Submodule
