--- a/packages/app/src/configs/production.config.json
+++ b/packages/app/src/configs/production.config.json
@@ -7,7 +7,7 @@
       "hostnames": [
         "https://goerli.explorer.zksync.io"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://goerli.etherscan.io",
       "l2ChainId": 280,
       "l2NetworkName": "zkSync Era Goerli Testnet",
@@ -23,7 +23,7 @@
       "hostnames": [
         "https://sepolia.explorer.zksync.io"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://sepolia.etherscan.io",
       "l2ChainId": 300,
       "l2NetworkName": "zkSync Era Sepolia Testnet",
@@ -39,7 +39,7 @@
       "hostnames": [
         "https://explorer.zksync.io"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://etherscan.io",
       "l2ChainId": 324,
       "l2NetworkName": "zkSync Era Mainnet",
