--- a/packages/app/src/configs/staging.config.json
+++ b/packages/app/src/configs/staging.config.json
@@ -7,7 +7,7 @@
       "hostnames": [
         "https://goerli.staging-scan-v2.zksync.dev"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://goerli.etherscan.io",
       "l2ChainId": 280,
       "l2NetworkName": "zkSync Era Goerli Testnet",
@@ -23,7 +23,7 @@
       "hostnames": [
         "https://sepolia.staging-scan-v2.zksync.dev"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://sepolia.etherscan.io",
       "l2ChainId": 300,
       "l2NetworkName": "zkSync Era Sepolia Testnet",
@@ -38,7 +38,7 @@
       "hostnames": [
         "https://goerli-beta.staging-scan-v2.zksync.dev"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://goerli.etherscan.io",
       "l2ChainId": 270,
       "l2NetworkName": "Goerli (Stage2)",
@@ -54,7 +54,7 @@
       "hostnames": [
         "https://staging-scan-v2.zksync.dev"
       ],
-      "icon": "/images/icons/zksync-arrows.svg",
+      "icon": "/images/icons/cion.png",
       "l1ExplorerUrl": "https://etherscan.io",
       "l2ChainId": 324,
       "l2NetworkName": "zkSync Era Mainnet",
