feat: add networkKey to config

--- a/packages/worker/.env.example
+++ b/packages/worker/.env.example
@@ -3,12 +3,12 @@ PORT=3001
 
 DATABASE_HOST=localhost
 DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DATABASE_PASSWORD=123456
 DATABASE_NAME=block-explorer
 DATABASE_CONNECTION_IDLE_TIMEOUT_MS=12000
 DATABASE_CONNECTION_POOL_SIZE=100
 
-BLOCKCHAIN_RPC_URL=http://localhost:3050
+BLOCKCHAIN_RPC_URL=https://sepolia.rpc.zklink.network
 DATA_FETCHER_URL=http://localhost:3040
 DATA_FETCHER_REQUEST_TIMEOUT=120000
 
@@ -41,3 +41,9 @@ TO_BLOCK=
 
 COINGECKO_IS_PRO_PLAN=false
 COINGECKO_API_KEY=
+
+BRIDGE_NETWORK_KEYS=primary,sepolia
+L1_ERC20_BRIDGE_PRIMARY=0x72de6d167ded1ee5fba17334bdcce686f3204d38
+L2_ERC20_BRIDGE_PRIMARY=0x1895de0bea0eb8d8c7e6997c9be7649bb402d9e6
+L1_ERC20_BRIDGE_SEPOLIA=0x9FF541E9de225157d245Ca46cFF6868e5c289C8F
+L2_ERC20_BRIDGE_SEPOLIA=0x3247575b4336C79956C5Df667A19C0AcBA9C62D6
