fix:styles change

--- a/packages/app/src/configs/hyperchain.config.json
+++ b/packages/app/src/configs/hyperchain.config.json
@@ -14,5 +14,12 @@
       "published": true,
       "rpcUrl": "https://sepolia.rpc.zklink.network"
     }
-  ]
+  ],
+  "iconsList":{
+    "sepolia": "/img/ethereum.svg",
+    "primary":"/img/arbitrum-arb-logo.svg",
+    "zksyncsepolia":"/img/era.svg",
+    "scrollsepolia":"/img/sepolia.jpg"
+
+  }
 }
