--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ cypress/videos/
 cypress/screenshots/
 tests/e2e/reports/
 **/tests/e2e/artifacts/
+**/playbook/artifacts-zk/
+**/playbook/artifacts/
+**/playbook/buffer/
+**/playbook/cache-zk/
+**/playbook/cache/
 
 # Logs
 logs
