Add environment-specific build and development scripts and configuration files

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,11 @@
   "repository": "https://github.com/matter-labs/block-explorer",
   "scripts": {
     "dev": "vite",
+    "dev:sepolia": "VITE_APP_ENVIRONMENT=sepolia vite",
+    "dev:goerli": "VITE_APP_ENVIRONMENT=goerli vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build:sepolia": "VITE_APP_ENVIRONMENT=sepolia vue-tsc --noEmit && VITE_APP_ENVIRONMENT=sepolia vite build",
+    "build:goerli": "VITE_APP_ENVIRONMENT=goerli vue-tsc --noEmit && VITE_APP_ENVIRONMENT=goerli vite build",
     "start": "vite preview --port 3010",
     "test": "TZ=UTC-3 vitest --environment jsdom",
     "test:ci": "TZ=UTC-3 vitest --environment jsdom --run --reporter=verbose --reporter=junit --outputFile.junit=./junit.xml",
