--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -44,6 +44,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+          npm install -g yarn 
+          cd ./packages/testing-docs && yarn
 
       - name: Lint
         run: |
