--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -1,4 +1,5 @@
 name: Integration test - API
+
 on: pull_request
 
 jobs:
@@ -14,14 +15,14 @@ jobs:
         node-version: ['lts/*'] # 18.17.1 or lts/* 
         test-pattern:
           - accounts.test.ts
-          - addresses.test.ts
-          - batches.test.ts
-          - blocks.test.ts
-          - contracts.test.ts
-          - logs.test.ts
-          - stats.test.ts
-          - tokens.test.ts
-          - transactions.test.ts
+          # - addresses.test.ts
+          # - batches.test.ts
+          # - blocks.test.ts
+          # - contracts.test.ts
+          # - logs.test.ts
+          # - stats.test.ts
+          # - tokens.test.ts
+          # - transactions.test.ts
     name: 'API test set: ${{ matrix.test-pattern}} / Node: ${{ matrix.node-version}}'
     steps:
       - name: Checkout with Submodule
@@ -35,26 +36,30 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
 
-      - name: Install dependencies
-        run: |
-          npm ci --no-audit
-          npx playwright install --with-deps chromium
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - run: docker-compose pull
+
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+      
       - name: Start docker containers
         run: |
           docker-compose -f "docker-compose.yaml" up -d --build
-      - name: List running containers
-        run: docker ps
 
       - name: API tests run (parallel)
+        working-directory: packages/integration-tests
         run: |
-          cd packages/integration-tests
-          npx jest --verbose --testPathPattern=${{ matrix.test-pattern }}
+          npm ci --no-audit
+          npx playwright install --with-deps chromium
+      
+      - name: API tests run (parallel)
+        working-directory: packages/integration-tests
+        run: |
+          npx jest
       - name: Stop containers
         if: always()
         run: |
