--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: Load image
         run: |
-          docker load --input /tmp/*.tar
+          ls -1 /tmp/**/*.tar | xargs --no-run-if-empty -L 1 docker load --input
           docker image ls -a 
 
 #      - uses: isbang/compose-action@v1.5.1
