--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -58,7 +58,7 @@ jobs:
         node-version: ['lts/*'] # 18.17.1 or lts/* 
         test-pattern:
           - accounts.test.ts
-          # - addresses.test.ts
+          - addresses.test.ts
           # - batches.test.ts
           # - blocks.test.ts
           # - contracts.test.ts
