--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -59,13 +59,13 @@ jobs:
         test-pattern:
           - accounts.test.ts
           - addresses.test.ts
-          # - batches.test.ts
-          # - blocks.test.ts
-          # - contracts.test.ts
-          # - logs.test.ts
-          # - stats.test.ts
-          # - tokens.test.ts
-          # - transactions.test.ts
+          - batches.test.ts
+          - blocks.test.ts
+          - contracts.test.ts
+          - logs.test.ts
+          - stats.test.ts
+          - tokens.test.ts
+          - transactions.test.ts
     name: 'API test set: ${{ matrix.test-pattern}} / Node: ${{ matrix.node-version}}'
     steps:
       - name: Checkout repo
