--- a/.github/workflows/integration-tests-api.yml
+++ b/.github/workflows/integration-tests-api.yml
@@ -58,14 +58,14 @@ jobs:
         node-version: ['lts/*'] # 18.17.1 or lts/* 
         test-pattern:
           - accounts.test.ts
-          - addresses.test.ts
-          - batches.test.ts
-          - blocks.test.ts
-          - contracts.test.ts
-          - logs.test.ts
-          - stats.test.ts
-          - tokens.test.ts
-          - transactions.test.ts
+#          - addresses.test.ts
+#          - batches.test.ts
+#          - blocks.test.ts
+#          - contracts.test.ts
+#          - logs.test.ts
+#          - stats.test.ts
+#          - tokens.test.ts
+#          - transactions.test.ts
     name: 'API test set: ${{ matrix.test-pattern}} / Node: ${{ matrix.node-version}}'
     steps:
       - name: Checkout repo
@@ -112,4 +112,4 @@ jobs:
       - name: Run ${{ matrix.test-pattern }}
         working-directory: packages/integration-tests
         run: |
-          npx jest --verbose --testPathPattern=${{ matrix.test-pattern }}
+          npx jest --verbose
